# 01.web-project-microshop

./: .gitignore  alembic.ini  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 249b25960f5b_add_count_column_to_order_product_.py  275fbf8ec8b5_add_field_role_to_users.py  47ca87328fb0_create_post_table.py  4972511dc153_recreate_tables.py  53c6fdec5f03_create_order_product_association_table.py  b25a7fa8708e_create_products_table.py  c3a910dcda5f_add_unit_price_column_to_order_product_.py  e4d420b0c4a8_create_user_table.py  e63779939428_tables.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_auth.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: role_required.py
auth/auth/: test.py  utils.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixin.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
